--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "built/index.js",
   "types": "built/index.d.ts",
   "scripts": {
-    "prepare": "rm -rf built && tsc",
+    "prepare": "npm run build",
+    "build": "rm -rf built && tsc",
     "start": "tsc -w --outDir example/built"
   },
   "repository": {
